<resources>
    <string name="app_name">Android Project</string>
    <!--  fragment_login  -->
    <string name="login_fragment_title">Login</string>
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <!--  fragment register  -->
    <string name="register_fragment_title">Register</string>
    <string name="name_input_hint">Name</string>
    <string name="address_input_hint">Address</string>
    <string name="phone_input_hint">Phone</string>
    <string name="confirm_input_hint">Confirm Password</string>
    <!--  item_layout  -->
    <string name="img_desc">Restaurant image</string>
    <string name="fav_desc">Favorite button</string>
    <string name="rest_name">Name</string>
    <string name="rest_address">Address</string>
    <string name="rest_price">Price</string>
    <!--  fragment_list  -->
    <string name="list_fragment_title">List of restaurants</string>
    <string name="search_input_hint">Enter restaurant name here</string>
    <string name="search_btn_text">Search</string>
    <!--  fragment_filter  -->
    <string name="filter_fragment_title">Filters</string>
    <string name="listed_data_text">Data to list</string>
    <string name="listed_data_all">All</string>
    <string name="listed_data_favorites">Only favorites</string>
    <string name="listed_data_without_favorites">Without favorites</string>
    <string name="country_text">Country</string>
    <string name="city_text">City</string>
    <string name="price_text">Price</string>
    <string name="price_all">All</string>
    <string name="price_1">1</string>
    <string name="price_2">2</string>
    <string name="price_3">3</string>
    <string name="price_4">4</string>
    <string name="save_button_text">Save</string>
    <string name="back_button_text">Back</string>
    <!--  list_menu  -->
    <string name="search_title">Search</string>
    <string name="filter_title">Filter</string>
    <!--  bottom_nav_menu  -->
    <string name="list_title">List</string>
    <string name="profile_title">Profile</string>
    <!--  fragment_loading  -->
    <string name="loading_message">Loading…</string>
    <!--  fragment profile  -->
    <string name="personal_data_title">Personal data</string>
    <string name="edit_button_text">Edit</string>
    <string name="name_label">Name:</string>
    <string name="email_label">Email:</string>
    <string name="address_label">Address:</string>
    <string name="phone_label">Phone:</string>
    <string name="favorites_title">Favorite restaurants</string>
    <!--  fragment_detail  -->
    <string name="price_label_text">Price:</string>
    <string name="country_label_text">Country:</string>
    <string name="state_label_text">State:</string>
    <string name="area_label_text">Area:</string>
    <string name="city_label_text">City:</string>
    <string name="address_label_text">Address:</string>
    <string name="postal_code_label_text">Postal code:</string>
    <string name="phone_label_text">Phone:</string>
    <string name="image_section_title">Images</string>
    <string name="call_btn_text">Call</string>
</resources>